--- a/css/progames.css
+++ b/css/progames.css
@@ -1,6 +1,7 @@
 #paper
 {
-	width: 500px;
-	height: 500px;
-	border: 1px solid #aaa  
+	width: 300px;
+	height: 300px;
+	border: 1px solid #aaa;
+	background-color: #ccefe1;  
 }
