--- a/css/progames.css
+++ b/css/progames.css
@@ -3,7 +3,8 @@
 	width: 300px;
 	height: 300px;
 	border: 1px solid #aaa;
-	background-color: #ccefe1;  
+	background-color: #ccefe1;
+	background-image: url(../images/backgroung.jpg);  
 }
 
 #paper.error
